--- a/malefashion/templetes/blog.html
+++ b/malefashion/templetes/blog.html
@@ -47,7 +47,8 @@
                 <span><img src="{% static 'img/icon/calendar.png' %}" alt=""> {{ i.pub_date  }}</span>
                 <h2>Under approved</h2>
                 <h5>{{i.title}}</h5>
-                <h5>Author:- {{i.user}}</h5>
+                <h5>Author:- {{i.user}}
+                </h5>
                 <a>Read More</a>
             </div>
             {% endif %} {% endfor %}
