--- a/malefashion/templetes/register.html
+++ b/malefashion/templetes/register.html
@@ -20,6 +20,10 @@
         ul {
             display: none;
         }
+        
+        input {
+            border-radius: 20px;
+        }
     </style>
 </head>
 
